<resources>
    <string name="app_name">hafiz_e_quran  App</string>
    <string name="Hafiz_management">HAFIZ MANAGEMENT</string>
    <string name="manage_daily_learnings">Manage Daily Learnings</string>
    <string name="search_student_records">Search Student Record</string>
    <string name="add_students">Add Students on the app</string>
    <string name="date1">Date</string>
    <string name="see_all_students">See All Students</string>
    <string name="name_of_student">Name</string>
    <string name="age_of_student">Age</string>
    <string name="clas1">Class</string>
    <string name="add">Add</string>
    <string name="sabki">Sabki</string>
    <string name="daily_sabaq">Daily Lesson</string>
    <string name="manzil">Manzil</string>
    <string name="surah_no">Surah number.</string>
    <string name="start_ayaat">Start ayat</string>
    <string name="end_ayat">End ayat</string>
    <string name="surah_number">Surah number</string>
    <string name="surah_number2">Surah number</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="search1">Search</string>
    <string name="student_search">Student Search</string>
    <string name="student_Search">Student Search</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
</resources>